# batai

./: .copier-answers.resonant.yml  .editorconfig  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  BATBOT_Integration_Notes.md  DEPLOYMENT.md  INSTRUCTIONS.md  MANIFEST.in  Procfile  README.md  docker-compose.nabat.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: cd.yaml  ci.yaml  ci.yml
assets/: model.mobilenet.onnx
bats_ai/: .flake8  api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
bats_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bats_ai/core/: api.py  apps.py  constants.py  tasks.py
bats_ai/core/admin/: __init__.py  annotations.py  compressed_spectrogram.py  configuration.py  exported_annotation.py  grts_cells.py  image.py  processing_task.py  pulse_annotation.py  pulse_metadata.py  recording.py  recording_annotations.py  recording_tag.py  sequence_annotations.py  species.py  species_range.py  spectrogram.py  spectrogram_image.py  spectrogram_svg.py  temporal_annotations.py  user.py  vetting_details.py
bats_ai/core/fixtures/: species.json
bats_ai/core/migrations/: 0001_default_site.py  0001_initial.py  0002_oauth_application.py  0002_species.py  0003_annotations.py  0004_spectrogram.py  0005_alter_recording_recording_location.py  0005_recording_public.py  0006_alter_recording_recording_location.py  0006_temporalannotations.py  0007_temporalannotations.py  0008_grtscells_recording_recorded_time.py  0009_annotations_type.py  0009_annotations_type_recording_computed_species_and_more.py  0009_spectrogram_colormap.py  0010_compressedspectrogram.py  0010_recording_computed_species_recording_detector_and_more.py  0011_alter_annotations_options_annotations_confidence_and_more.py  0011_spectrogram_colormap.py  0012_alter_annotations_confidence.py  0012_recordingannotation_additional_data.py  0013_configuration.py  0014_acousticbatch_nabatspectrogram_and_more.py  0014_configuration_run_inference_on_upload_and_more.py  0014_nabatrecording_processingtask_nabatspectrogram_and_more.py  0015_configuration_default_color_scheme.py  0015_configuration_default_color_scheme_options.py  0015_nabatrecording_processingtask_nabatspectrogram_and_more.py  0015_processingtask.py  0016_alter_species_common_name_alter_species_family_and_more.py  0017_configuration_default_color_scheme_and_more.py  0018_exportedannotationfile.py  0018_remove_compressedspectrogram_image_file_and_more.py  0019_remove_compressedspectrogram_image_file_and_more.py  0020_species_category.py  0021_remove_grtscells_clipped_and_more.py  0022_rename_temporalannotations_sequenceannotations.py  0023_nabatsession.py  0023_recordingtag_recording_tag_and_more.py  0023_recordingtag_recording_tags_and_more.py  (+33 more)
bats_ai/core/models/: __init__.py  annotations.py  compressed_spectrogram.py  configuration.py  exported_file.py  grts_cells.py  image.py  processing_task.py  pulse_annotation.py  pulse_metadata.py  recording.py  recording_annotation.py  recording_annotation_status.py  sequence_annotations.py  species.py  species_range.py  spectrogram.py  spectrogram_image.py  spectrogram_vector.py  temporal_annotations.py  user_profile.py  vetting_details.py
bats_ai/core/rest/: __init__.py  compressed_spectrogram.py  image.py  recording.py  spectrogram.py
bats_ai/core/tasks/: __init__.py  export_task.py  periodic.py  tasks.py
bats_ai/core/templates/: gallery.html  summary.html
bats_ai/core/tests/: conftest.py  factories.py  test_admin.py  test_auth.py  test_user_profile.py  test_vetting_details.py
bats_ai/core/utils/: batbot_annotations.py  batbot_metadata.py  contour_utils.py  grts_utils.py  guano_utils.py  image_utils.py  spectrogram.py
bats_ai/core/views/: __init__.py  annotations.py  configuration.py  export_annotation.py  export_task.py  grts_cells.py  guanometadata.py  processing_tasks.py  (+8 more)
bats_ai/settings/: aws.py  aws_production.py  base.py  development.py  heroku_production.py  kitware.py  kitware_production.py  nabat_production.py  production.py  testing.py
bats_ai/tasks/: export_task.py  periodic.py  tasks.py
bats_ai/utils/: contour_utils.py  spectrogram.py  spectrogram_utils.py
client/: .env  .env.production  .eslintrc.cjs  .eslintrc.js  INSTRUCTIONS.md  README.md  env.d.ts  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
client/src/: App.vue  constants.ts  env.d.ts  main.ts  vite-env.d.ts
dev/: .env.docker-compose  .env.docker-compose-native  .env.prod.docker-compose  .env.prod.docker-compose.template  .env.prod.s3.template  client.Dockerfile  django.Dockerfile  export-env.sh  mlflow.Dockerfile  native-development.md  sciencebase-fullchain.crt
nginx/: nginx.conf
prod/: .env.aws-production.template  .env.kitware-production.template  .env.nabat-production.template  NABat-Deploy.md  client.Dockerfile  django.Dockerfile  docker-compose.nabat.yml  docker-compose.prod.yml
prod/nginx/: nginx.conf  nginx.nominio.template  nginx.subpath.nominio.template  nginx.subpath.template
scripts/: .gitignore  batbot_spectrogram.py  generateSpectrograms.py  gridCell.py  guanoInfo.py  mlflow.py
scripts/USGS/: naBatInfo.py  naBatSpecies.py  sampleUrl.txt  test.py
scripts/batbot/: batbot_spectrogram.py  batch_convert_recordings.py  csv_wav_sample_rates.py  wav_sample_rates.py
scripts/contours/: extract_contours.py  extract_countours.py
scripts/grtsCell/: grts_cell_center.py  zip_shapefile_properties.py
scripts/model/: .gitignore  Dockerfile  README.md  freqs.py  onnx.py  preparation.py  requirements.txt  spectrograms.py  trainer.py  visualize.py
scripts/spectrograms/: create_tiled_spectrogram.py
scripts/synthetic/: waveGenerator.py
terraform/: .terraform.lock.hcl  django.tf  install_worker.sh  main.tf  ssh-key.pub  variables.tf  www.tf
(+127 files in other folders)
