[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bats-ai"
version = "0.0.0"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  # Runtime dependendencies, always needed
  "celery",
  "django[argon2]",
  "django-ninja",
  "django-allauth",
  "django-auth-style",
  "django-cors-headers",
  "django-environ",
  "django-extensions",
  "django-oauth-toolkit",
  "django-resonant-settings[allauth,celery]",
  "django-resonant-utils[allauth,s3_storage]",
  "django-s3-file-field[s3]",
  "django-storages[s3]",
  "django-stubs-ext",
  "psycopg[binary]",
  "pydantic",
  "rich",
  "whitenoise[brotli]",
  "tqdm",
  # guano metadata
  "gdal",
  "geopandas>=1.1.1",
  "guano",
  "django-celery-results",
  # Production-only
  "sentry-sdk[celery,django,pure_eval]",
  "gunicorn",
]

[project.optional-dependencies]
development = [
  "django-browser-reload",
  "django-click",
  "django-debug-toolbar",
  "django-minio-storage",
  "django-resonant-utils[minio_storage]",
  "django-s3-file-field[minio]",
  "faker",
  "ipython",
  "watchdog",
  "werkzeug",
]
tasks = [
  # Heavy duty dependencies used for computationally
  # intensive tasks, such as spectrogram generation
  "batbot",
  "numpy",
  "scipy",
  "scikit-image",
  "opencv-python-headless",
]

[dependency-groups]
dev = [
  # Additional developer tools
  # The "dev" dependency group is installed by default,
  # so use this to install "development" and "tasks" extras by default too
  "bats-ai[development,tasks]",
  "tox",
  "tox-uv",
]
lint = [
  "ruff",
]
type = [
  "mypy",
  "celery-types",
  "django-stubs[compatible-mypy]",
]
test = [
  "factory-boy",
  "pytest",
  "pytest-django",
  "pytest-mock",
  # Enable with "pytest --random-order ..."
  "pytest-random-order",
  # Enable with "pytest --count=... ..."
  "pytest-repeat",
]

[tool.hatch.build]
only-include = [
  "bats_ai",
]

[tool.uv]
constraint-dependencies = [
  # Earlier versions of "numba" didn't specify an upper bound for
  # its compatability with "numpy", which led to incorrect versions of "numpy".
  "numba >= 0.61.0",
]

[[tool.uv.index]]
name = "large_image_wheels"
url = "https://girder.github.io/large_image_wheels/"
explicit = true

[tool.uv.sources]
gdal = { index = "large_image_wheels" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM", # flake8-errmsg
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "PLR2004", # magic-value-comparison
  "RET505", # superfluous-else-return
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "RET508", # superfluous-else-break
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
  "A002", # builtin-argument-shadowing
  "ARG003", # unused-class-method-argument
  "BLE001", # blind-except
  "C901", # complex-structure
  "DJ001", # django-nullable-model-string-field
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
  "FBT003", # boolean-positional-value-in-call
  "G004", # logging-f-string
  "INP001", # implicit-namespace-package
  "N802", # invalid-function-name
  "N803", # invalid-argument-name
  "N806", # non-lowercase-variable-in-function
  "N812", # lowercase-imported-as-non-lowercase
  "N815", # mixed-case-variable-in-class-scope
  "N999", # invalid-module-name
  "PLC0415", # import-outside-top-level
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0915", # too-many-statements
  "PLW2901", # redefined-loop-name
  "PTH", # flake8-use-pathlib
  "S101", # assert
  "S110", # try-except-pass
  "S308", # suspicious-mark-safe-usage
  "S310", # suspicious-url-open-usage
  "S311", # suspicious-non-cryptographic-random-usage
  "SLF001", # private-member-access
  "T201", # print
  "TC", # flake8-type-checking
  "TRY300", # try-consider-else
  "TRY301", # raise-within-try
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = [
  "N806", # non-lowercase-variable-in-function
  "RUF012", # mutable-class-default
]
"**/settings/**" = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
]
"**/settings/{development,testing}.py" = [
  "S105", # hardcoded-password-string
]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "S", # flake8-bandit
  "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "resonant-settings"]
sections = {"resonant-settings" = ["resonant_settings"] }

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "bats_ai",
]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "bats_ai.settings.testing"

[tool.pytest.ini_options]
addopts = [
  # Test utilities should be imported absolutely from the pythonpath,
  # so use the Pytest-recommended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  # Specifying as "--ds" will override any value in the environment
  "--ds=bats_ai.settings.testing",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
  # https://github.com/vitalik/django-ninja/issues/1245
  "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
  # https://github.com/celery/kombu/issues/1339
  "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning:kombu",
]
